--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using puppet_server
-@using puppet_server.Models
+﻿@using PuppetServer
+@using PuppetServer.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
